--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: 'Source Code Pro', monospace;
   position: fixed;
   padding: 10px 10px 0px 10px;
-  bottom: 0;
+  top: 0;
   width: 100%;
   height: 25px;
   left:0; 
